--- a/week1/duration-prediction.ipynb
+++ b/week1/duration-prediction.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "1                    1.0          16.9                   2.5          0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -381,44 +381,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7.649261932106969"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train = train_dicts\n",
-    "\n",
-    "target = 'duration'\n",
-    "y_train = df1_filtered[target].values\n",
-    "\n",
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = lr.predict(X_train)\n",
-    "\n",
-    "mean_squared_error(y_train, y_pred, squared=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -438,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,16 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +437,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vendorid</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>ratecodeid</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>pulocationid</th>\n",
+       "      <th>dolocationid</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>airport_fee</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>PU_DO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-01 00:32:53</td>\n",
+       "      <td>2023-02-01 00:34:34</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>142</td>\n",
+       "      <td>163</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.40</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.683333</td>\n",
+       "      <td>142_163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-01 00:29:33</td>\n",
+       "      <td>2023-02-01 01:01:38</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>132</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>74.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>32.083333</td>\n",
+       "      <td>132_26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-02-01 00:12:28</td>\n",
+       "      <td>2023-02-01 00:25:46</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>161</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>13.300000</td>\n",
+       "      <td>161_145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-01 00:52:40</td>\n",
+       "      <td>2023-02-01 01:07:18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>148</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5.35</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>32.25</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>14.633333</td>\n",
+       "      <td>148_236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-01 00:12:39</td>\n",
+       "      <td>2023-02-01 00:40:36</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>137</td>\n",
+       "      <td>244</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>27.950000</td>\n",
+       "      <td>137_244</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   vendorid tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         1  2023-02-01 00:32:53   2023-02-01 00:34:34              2.0   \n",
+       "3         1  2023-02-01 00:29:33   2023-02-01 01:01:38              0.0   \n",
+       "4         2  2023-02-01 00:12:28   2023-02-01 00:25:46              1.0   \n",
+       "5         1  2023-02-01 00:52:40   2023-02-01 01:07:18              1.0   \n",
+       "6         1  2023-02-01 00:12:39   2023-02-01 00:40:36              1.0   \n",
+       "\n",
+       "   trip_distance  ratecodeid store_and_fwd_flag pulocationid dolocationid  \\\n",
+       "0           0.30         1.0                  N          142          163   \n",
+       "3          18.80         1.0                  N          132           26   \n",
+       "4           3.22         1.0                  N          161          145   \n",
+       "5           5.10         1.0                  N          148          236   \n",
+       "6           8.90         1.0                  N          137          244   \n",
+       "\n",
+       "   payment_type  ...  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             2  ...   3.50      0.5        0.00           0.0   \n",
+       "3             1  ...   2.25      0.5        0.00           0.0   \n",
+       "4             1  ...   1.00      0.5        3.30           0.0   \n",
+       "5             1  ...   3.50      0.5        5.35           0.0   \n",
+       "6             1  ...   3.50      0.5        3.50           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \\\n",
+       "0                    1.0          9.40                   2.5         0.00   \n",
+       "3                    1.0         74.65                   0.0         1.25   \n",
+       "4                    1.0         25.30                   2.5         0.00   \n",
+       "5                    1.0         32.25                   2.5         0.00   \n",
+       "6                    1.0         50.00                   2.5         0.00   \n",
+       "\n",
+       "    duration    PU_DO  \n",
+       "0   1.683333  142_163  \n",
+       "3  32.083333   132_26  \n",
+       "4  13.300000  161_145  \n",
+       "5  14.633333  148_236  \n",
+       "6  27.950000  137_244  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +669,7 @@
        "(3009173, 2855951)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +694,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,36 +705,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train['PU_DO'] = df_train['pulocationid'] + '_' + df_train['dolocationid']\n",
-    "df_val['PU_DO'] = df_val['pulocationid'] + '_' + df_val['dolocationid']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categorical = ['PU_DO'] #'PULocationID', 'DOLocationID']\n",
-    "numerical = ['trip_distance']\n",
+    "#categorical = ['PU_DO'] #'PULocationID', 'DOLocationID']\n",
+    "#categorical = ['pulocationid', 'dolocationid']\n",
+    "#numerical = ['trip_distance']\n",
     "\n",
     "dv = DictVectorizer()\n",
     "\n",
     "#train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
-    "train_dicts = df_train[categorical].to_dict(orient='records')\n",
+    "train_dicts = df_train[['pulocationid', 'dolocationid']].astype(str).to_dict(orient='records')\n",
     "X_train = dv.fit_transform(train_dicts)\n",
     "\n",
-    "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
+    "val_dicts = df_val[['pulocationid', 'dolocationid']].astype(str).to_dict(orient='records')\n",
     "X_val = dv.transform(val_dicts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,15 +736,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE on training data: 5.026739080571275\n",
-      "RMSE on validation data: 5.198558565911539\n"
+      "RMSE on training data: 7.649261932106969\n",
+      "RMSE on validation data: 7.811818743246608\n"
      ]
     },
     {
