--- a/week1/duration-prediction.ipynb
+++ b/week1/duration-prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "      <th>pulocationid</th>\n",
        "      <th>dolocationid</th>\n",
        "      <th>payment_type</th>\n",
-       "      <th>...</th>\n",
+       "      <th>fare_amount</th>\n",
        "      <th>extra</th>\n",
        "      <th>mta_tax</th>\n",
        "      <th>tip_amount</th>\n",
@@ -481,7 +481,6 @@
        "      <th>congestion_surcharge</th>\n",
        "      <th>airport_fee</th>\n",
        "      <th>duration</th>\n",
-       "      <th>PU_DO</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -497,7 +496,7 @@
        "      <td>142</td>\n",
        "      <td>163</td>\n",
        "      <td>2</td>\n",
-       "      <td>...</td>\n",
+       "      <td>4.4</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.00</td>\n",
@@ -507,7 +506,6 @@
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>1.683333</td>\n",
-       "      <td>142_163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -521,7 +519,7 @@
        "      <td>132</td>\n",
        "      <td>26</td>\n",
        "      <td>1</td>\n",
-       "      <td>...</td>\n",
+       "      <td>70.9</td>\n",
        "      <td>2.25</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.00</td>\n",
@@ -531,7 +529,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.25</td>\n",
        "      <td>32.083333</td>\n",
-       "      <td>132_26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -545,7 +542,7 @@
        "      <td>161</td>\n",
        "      <td>145</td>\n",
        "      <td>1</td>\n",
-       "      <td>...</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.5</td>\n",
        "      <td>3.30</td>\n",
@@ -555,7 +552,6 @@
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>13.300000</td>\n",
-       "      <td>161_145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -569,7 +565,7 @@
        "      <td>148</td>\n",
        "      <td>236</td>\n",
        "      <td>1</td>\n",
-       "      <td>...</td>\n",
+       "      <td>21.9</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.5</td>\n",
        "      <td>5.35</td>\n",
@@ -579,7 +575,6 @@
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>14.633333</td>\n",
-       "      <td>148_236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -593,7 +588,7 @@
        "      <td>137</td>\n",
        "      <td>244</td>\n",
        "      <td>1</td>\n",
-       "      <td>...</td>\n",
+       "      <td>41.5</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.5</td>\n",
        "      <td>3.50</td>\n",
@@ -603,11 +598,9 @@
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>27.950000</td>\n",
-       "      <td>137_244</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -625,12 +618,12 @@
        "5           5.10         1.0                  N          148          236   \n",
        "6           8.90         1.0                  N          137          244   \n",
        "\n",
-       "   payment_type  ...  extra  mta_tax  tip_amount  tolls_amount  \\\n",
-       "0             2  ...   3.50      0.5        0.00           0.0   \n",
-       "3             1  ...   2.25      0.5        0.00           0.0   \n",
-       "4             1  ...   1.00      0.5        3.30           0.0   \n",
-       "5             1  ...   3.50      0.5        5.35           0.0   \n",
-       "6             1  ...   3.50      0.5        3.50           0.0   \n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             2          4.4   3.50      0.5        0.00           0.0   \n",
+       "3             1         70.9   2.25      0.5        0.00           0.0   \n",
+       "4             1         17.0   1.00      0.5        3.30           0.0   \n",
+       "5             1         21.9   3.50      0.5        5.35           0.0   \n",
+       "6             1         41.5   3.50      0.5        3.50           0.0   \n",
        "\n",
        "   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \\\n",
        "0                    1.0          9.40                   2.5         0.00   \n",
@@ -639,17 +632,15 @@
        "5                    1.0         32.25                   2.5         0.00   \n",
        "6                    1.0         50.00                   2.5         0.00   \n",
        "\n",
-       "    duration    PU_DO  \n",
-       "0   1.683333  142_163  \n",
-       "3  32.083333   132_26  \n",
-       "4  13.300000  161_145  \n",
-       "5  14.633333  148_236  \n",
-       "6  27.950000  137_244  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "    duration  \n",
+       "0   1.683333  \n",
+       "3  32.083333  \n",
+       "4  13.300000  \n",
+       "5  14.633333  \n",
+       "6  27.950000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +660,7 @@
        "(3009173, 2855951)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +685,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
